crates/swc_ecma_parser/tests/errors/deferred-import-evaluation/no-default/from.js
import defer from from "x";
